--- a/X11/X11.csproj
+++ b/X11/X11.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <TargetFramework>net6.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Andrew Newlands</Authors>
     <Product />
     <Description>An interface to the X11 / X Windows libraries, notably including core Xlib but also including extensions such as XTest from .Net core/C#. This allows C# programmers to interact with the X Window system commonly seen on Linux (and other Unix) systems.</Description>
